# engineering-incident-annotation

./: .gitignore  CHANGELOG.md  LICENSE  POLICY.md  README.md  WORKFLOW.md  annotation_guidelines.md  pyproject.toml  taxonomy.md
data/annotated/: incidents.json
data/candidates/: generated_incident_candidates.json
data/candidates_manual_reviewed/: 001.json  003.json  008-004.json  011.json  012-020.json  013.json  014-034.json  015-1.json  017-010.json  018.json  019-006.json.json  025.json  029-021.json  030.json  031.json  033-022.json  035.json  036.json  037-002.json  038.json  039-026.json  040.json  24.json  28.json  man_generated_incident_candidates.json
data/ground_truth/: incidents.json
data/raw/: incidents.jsonl
data/splits/: held_out_test.json  split_manifest.json  test.json  train.json  validation.json
dataset/: train.json
docs/: GUIDELINES.md  annotation_guidelines.md  evaluation_plan.md  roadmap.md  synthetic_dataset_workflow.md  taxonomy.md
evaluation_runs/: README.md
evaluation_runs/prompt_v1/: metrics.json  predictions.json  (+1 more)
notes/: STORY.md
schemas/: incident_annotation.schema.json
scripts/: evaluate_rag_baseline.py  generate_synthetic_candidates.py  promote_approved_candidates.py  report_generated_dataset.py  run_prompt_baseline.py  run_qwen_smoke.py  split_dataset.py  split_ground_truth_dataset.py  validate_dataset.py
tests/: test_classification_metrics.py  test_evaluation.py  test_knowledge.py  test_parser.py  test_prompt.py  test_rag_policy_integration.py  test_severity_policy.py  test_synthetic_data.py  test_validation.py
(+26 files in other folders)
