[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-incident-intelligence"
version = "0.1.0"
description = "Applied AI incident annotation and evaluation platform"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
